fix sessions not in same time gap on mobile (position:relative cause it)

--- a/src/modules/scheduling/css/calendar.scss
+++ b/src/modules/scheduling/css/calendar.scss
@@ -204,7 +204,6 @@
                     display: block !important;
                 }
                 a.fc-event{
-                    position: relative;
                     top: 0px;
                     left: 0px;
                     margin:1px 0px;
